refactor into Drawing and Drawable classes, improvements to resizing
--HG--
rename : tart/python/pyggles/opengl.py => tart/python/pyggles/drawable.py
rename : tart/python/pyggles/opengl.py => tart/python/pyggles/drawing.py

--- a/tart/tart-libs/makefile
+++ b/tart/tart-libs/makefile
@@ -71,7 +71,7 @@ clean:
 $(TARGET): $(OBJECTS)
 	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(LIBS)
 	$(STRIP) $(TARGET)
-	$(COPY_FILE) $(TARGET) ../python/tart
+	$(COPY_FILE) $(TARGET) ../python/lib-dynload/_opengl-arm.so
 
 $(OBJECTS): $(SOURCES) fonts.h debug.h
 
