rewrite of much of Tart: cleaner, meaner, structural changes (but compatible with previous apps) event loop now runs via a QThread event loop with big benefits (removes need for tart.wait()) termination handled better so we see top-level exceptions and SystemExit doesn't kill the process exceptions during event handling cause traceback but not termination of the event loop several types of abnormal termination are handled more cleanly with less risk of a zombie process key change: Application event loop doesn't start till Python event loop starts add basic HelloWorld sample showing minimal app

--- a/.hgignore
+++ b/.hgignore
@@ -32,4 +32,4 @@ Simulator/
 Simulator-Debug/
 ^third-party/
 ^blackberry-py-old/
-/(arm|x86)/(Makefile|o.le-v7).*
+/(arm|x86)/(Makefile|o.le-v7|o-g).*
