Whee! Overhaul all samples and utilities to remove obsolete build/release scripts in favor of the new tart-project.ini file used along with "tart package" to make packaging close to trivial.  Also added automated DRAFT overlay on icon when not packaging a release. Fixed how buildId file is handled. Added some extra logic relating to missing app title, name, etc.

--- a/samples/TextureSample/tart-project.ini
+++ b/samples/TextureSample/tart-project.ini
@@ -1,16 +1,17 @@
 [project]
 
-name: HelloWorld
-title: BB-Tart HelloWorld
-id: ca.microcode.bbtart.HelloWorld
-version: 1.0.2
-description: The BB-Tart HelloWorld sample
+title: BB-Tart Textures
+id: ca.microcode.bbtart.TextureSample
+version: 0.1.0
+description: The BB-Tart Texture Sample
 
 theme: dark
 icon: icon.png
+assets:
+    app/
 
 [quickdeploy]
-    destination: HelloWorld
+    destination: TextureSample
 
     filters:
         include /tart.js
